--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -167,11 +167,11 @@
                 <p><a class="btn btn-default" href="/Report/5" role="button">Podrobnosti »</a></p>
             </div>
 
-            <div class="col-block-shadow">
+            @*<div class="col-block-shadow">
                 <h3><a href="/Report/6">Nové úřady a firmy v rejstříku smluv</a></h3>
                 <p>Firmy a úřady, které se nyní objevili v rejstříku poprvé.</p>
                 <p><a class="btn btn-default" href="/Report/6" role="button">Podrobnosti »</a></p>
-            </div>
+            </div>*@
             <div class="col-block-shadow">
                 <h3><a href="/Report/9">Firmy založené kolem data uzavření smlouvy</a></h3>
                 <p>Všechny firmy založené těsně před uzavřením smlouvy nebo až po uzavření smlouvy.</p>
