--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -172,10 +172,6 @@
         <th title="Smluvní strana/y">Dodavatel/é</th>
         <th>Popis smlouvy</th>
         <th>Maximální hodnota<br/>smlouvy s DPH</th>
-        @if (user.IsInRole("BetaTester"))
-        {
-            <th>Klasifikace</th>
-        }
     </tr>
 }
 
@@ -260,20 +256,14 @@
                 @Util.IfExists(rec.Prijemce.Count() > 2, HlidacStatu.Util.PluralForm.Get(rec.Prijemce.Count() - 2, "+{0} dodavatel;+{0} další dodavatelé;+{0} dalších dodavatelů"));
             }
         </td>
-        <td>@rec.predmet</td>
-        <td>@Html.Raw(rec.NicePrice(html: true))</td>
-    @if (user.IsInRole("BetaTester"))
-    {
-    <td style="font-size:11px;letter-spacing: -0.4px;line-height:11px;">
-        @if (rec.Classification?.Types?.Count() > 0)
-        {
-            foreach (var cl in rec.Classification.Types.OrderByDescending(m=>m.ClassifProbability))
+        <td>
+            @Devmasters.Core.TextUtil.ShortenText(rec.predmet, 160)
+            @if (rec.GetRelevantClassification().Count() > 0)
             {
-            <div style=""><b>@(cl.ClassifTypeName())</b>&nbsp;-&nbsp;@Html.Raw(cl.ClassifProbability.ToString("P4").Replace(" ","&nbsp;"))</div>
+                    <div class="text-success"><b>Obor smlouvy</b>: @(string.Join(" / ", rec.GetRelevantClassification().Select(m=>m.ClassifTypeName())))</div>
             }
-        }
-    </td>
-    }
+        </td>
+        <td>@Html.Raw(rec.NicePrice(html: true))</td>
 
 </tr>
 }
