--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -116,7 +116,17 @@ XINTEXT (0->0.7mld),
                     + "<meta property=\"og:image:height\" content=\"1080\" />"
                     + "<meta property=\"og:image:type\" content=\"image/png\" />"
                     ;
-
+            break;
+        case 26:
+            ViewBag.Title = "V jakých tématických oblastech státu uzavírá nejvíce smluv?";
+            ViewBag.SocialShareText = "Stát uzavírá různé smlouvy z různých důvodů. Jakých oblastí se týkají nejvíce?";
+            ViewBag.SubTitle = "";
+            ViewBag.SocialShareTitle = "V jakých oblastech státu uzavírá nejvíce smluv?";
+            ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
+            ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
+                    + "<meta property=\"og:image:height\" content=\"1080\" />"
+                    + "<meta property=\"og:image:type\" content=\"image/png\" />"
+                    ;
             break;
         default:
             break;
