--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -118,7 +118,7 @@ XINTEXT (0->0.7mld),
                     ;
             break;
         case 26:
-            ViewBag.Title = "V jakých tématických oblastech státu uzavírá nejvíce smluv?";
+            ViewBag.Title = "V jakých tématických oblastech uzavírá stát nejvíce smluv?";
             ViewBag.SocialShareText = "Stát uzavírá různé smlouvy z různých důvodů. Jakých oblastí se týkají nejvíce?";
             ViewBag.SubTitle = "";
             ViewBag.SocialShareTitle = "V jakých oblastech státu uzavírá nejvíce smluv?";
