--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -118,10 +118,10 @@ XINTEXT (0->0.7mld),
                     ;
             break;
         case 26:
-            ViewBag.Title = "V jakých tématických oblastech uzavírá stát nejvíce smluv?";
-            ViewBag.SocialShareText = "Stát uzavírá různé smlouvy z různých důvodů. Jakých oblastí se týkají nejvíce?";
+            ViewBag.Title = "V jakých oborech uzavírá stát nejvíce smluv?";
+            ViewBag.SocialShareText = "Stát uzavírá různé smlouvy z různých důvodů. V jakých oborech je jich nejvíce?";
             ViewBag.SubTitle = "";
-            ViewBag.SocialShareTitle = "V jakých oblastech státu uzavírá nejvíce smluv?";
+            ViewBag.SocialShareTitle = "V jakých oblastech stát uzavírá nejvíce smluv?";
             ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
             ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
                     + "<meta property=\"og:image:height\" content=\"1080\" />"
