--- a/Web.Statu/Views/Home/Reports/26_Classification.cshtml
+++ b/Web.Statu/Views/Home/Reports/26_Classification.cshtml
@@ -72,9 +72,9 @@
 
 }
 <div class="bs-callout bs-callout-primary">
-    <h4>V jakých tématických oblastech uzavírá stát nejvíce smluv?</h4>
+    <h4>V jakých oborech uzavírá stát nejvíce smluv?</h4>
     <div>
-        Stát uzavírá různé smlouvy z mnoha důvodů, pro různé typy služeb, prací, zboží. <b>Každou smlouvu se pokoušíme zařadit do jedné až dvou kategorií.</b>
+        Stát uzavírá různé smlouvy z mnoha důvodů, pro různé typy služeb, prací, zboží. <b>Každou smlouvu se pokoušíme zařadit do jedné až dvou oborů (kategorií) ze celkem 140.</b>
     </div>
 </div>
 
