--- a/Web.Statu/Views/Home/Reports/15_UradyObchodujiciSFirmamiCoSVazbouNaPolitiky.cshtml
+++ b/Web.Statu/Views/Home/Reports/15_UradyObchodujiciSFirmamiCoSVazbouNaPolitiky.cshtml
@@ -88,7 +88,7 @@ new  ReportDataSource<BasicDataForSubject<List<BasicData<string>>>>.Column() {
         },
 OrderValueRender = (s) => {
             var stat = ACore.GetBasicStatisticForICO(s.Ico);
-            return HlidacStatu.Util.RenderData.OrderValueFormat((stat.Summary.CelkemCena);
+            return HlidacStatu.Util.RenderData.OrderValueFormat((stat.Summary.CelkemCena));
     }
 },
 
