--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -23,6 +23,13 @@
     <div class="row">
         <div class="col-sm-12 col-sm-4">
             <h3 style="margin-top:0;">Smlouvy</h3>
+            <div class="col-block-shadow newbadge top-right">
+                <h3><a href="/Report/26">Obory (oblasti) smluvnich vztah;</a></h3>
+                <p>
+                    Stát uzavírá různé smlouvy z různých důvodů. V jakých oborech je jich nejvíce?
+                </p>
+                <p><a class="btn btn-default" href="/report/26" role="button">Podrobnosti »</a></p>
+            </div>
 
             <div class="col-block-shadow">
                 <h3><a href="/Report/7">Základní statistiky Registru smluv</a></h3>
