--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -24,7 +24,7 @@
         <div class="col-sm-12 col-sm-4">
             <h3 style="margin-top:0;">Smlouvy</h3>
             <div class="col-block-shadow newbadge top-right">
-                <h3><a href="/Report/26">Obory (oblasti) smluvnich vztah;</a></h3>
+                <h3><a href="/Report/26">Obory smluvních vztahů</a></h3>
                 <p>
                     Stát uzavírá různé smlouvy z různých důvodů. V jakých oborech je jich nejvíce?
                 </p>
