--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -178,6 +178,6 @@ XINTEXT (0->0.7mld),
 }
 @Html.Action("Report_child", new { routedata = data })
 
-@Util.FeedbackModal("Poslat opravu či připomínku")
+@Util.FeedbackModal("Poslat opravu či připomínku.")
 
 
